Added FileSet and groovydoc support.